--- a/GreekHTML/hera.html
+++ b/GreekHTML/hera.html
@@ -32,13 +32,13 @@
                         <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics>รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class=" nav-item ">
-                        <a class="nav-link " href="../ChooseHTML/greekC.html ">เทพเจ้ากรีก</a>
+                        <a class="nav-link " href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="../index.html>หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
