--- a/GreekHTML/zeus.html
+++ b/GreekHTML/zeus.html
@@ -45,7 +45,7 @@
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Poseidon.jpg" class="img-fluid">
+                <img src="../Full-Design/Zeus.jpg" class="img-fluid">
             </div>
     </div>
     </section>
